# find-your-okved

./: .gitignore  Makefile  README.md  pyproject.toml
settings/: cache.conf  github.conf
src/: __main__.py  deps.py  settings.py
src/clients/: github.py
src/commands/: cli.py
src/repositories/: cache.py
src/services/: okved.py
tests/integrational/: test_cache_repo.py  test_github_client.py
tests/unit/clients/: test_github_client.py
tests/unit/services/: test_okved.py
tests/unit/views/: test_form_resulting_message.py
